# rebelMC

./: .gitignore  README.md  main.py  pyproject.toml
app_pages/: methods.py  patch.py  settings.py
docs/: INSTALL.md  METHODS.md  index.md
game_patchers/: __init__.py  auto_permanent.py  auto_temporary.py
methods/: __init__.py  auto_permanent.py  auto_temporary.py  utils.py
methods/utils/: args.py  log.py  maxrm_mcpatch.py
src/rebelmc/: __main__.py
src/rebelmc/app_pages/: __init__.py  methods.py  patch.py  settings.py
src/rebelmc/methods/: __init__.py  auto_permanent.py  auto_temporary.py
